add unique id for dark/light css sheet. add placeholder for default style overrides

--- a/index.html
+++ b/index.html
@@ -129,7 +129,8 @@
         <link href="https://dolphin-emu.org/m/static/sprites/nav.fae7f1660efd.css" rel="stylesheet">
         
 <link href="https://dolphin-emu.org/m/static/css/ekko-lightbox.min.16336cbd646a.css" rel="stylesheet">
-<link rel="stylesheet" href="./darkDolphin.css">
+<link id="theme-link" rel="stylesheet" href="./lightDolphin.css">
+<link rel="stylesheet" href="./oreoDolphin.css">
 
 
         
@@ -1274,18 +1275,3 @@
 </html>
 
 <script src="./toggleMode.js"></script>
-
-<style>
-        /*toggle svg*/
-        svg.feather{
-        stroke: #999;
-        margin-left: 10px;
-        margin-top: 13px;
-        cursor:pointer;
-        float:right;
-    }
-
-    svg.feather:hover {
-        stroke: white;
-    }
-</style>
