--- a/index.html
+++ b/index.html
@@ -202,12 +202,12 @@
                 </div>
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav pull-left">
-                        <li><a href="/download/">Download</a></li>
-                        <li><a href="/blog/">Blog</a></li>
-                        <li><a href="/media/">Screenshots</a></li>
-                        <li><a href="/docs/faq/">FAQ</a></li>
-                        <li><a href="/docs/guides/">Guides</a></li>
-                        <li><a href="/compat/">Compatibility</a></li>
+                        <li><a href="/download.html">Download</a></li>
+                        <li><a href="/blog.html">Blog</a></li>
+                        <li><a href="/media.html">Screenshots</a></li>
+                        <li><a href="/faq.html">FAQ</a></li>
+                        <li><a href="/guides.html">Guides</a></li>
+                        <li><a href="/compat.html">Compatibility</a></li>
                         <li><a href="https://forums.dolphin-emu.org/">Forum</a></li>
                         <li><a href="https://wiki.dolphin-emu.org/">Wiki</a></li>
                         <li id="lastNavbarLi"><a href="https://github.com/dolphin-emu/dolphin">Code</a></li>
